tests/fail/tuple-lit/check.pion.snap
exit status: 0
stdout:
let _ : (Int, Int, Int, Int) = #error;
let _ : (Int, Int, Int) = #error;
let _ : (Int, Int) = #error;
() : ()

stderr:
error: mismatched types
  ┌─ tests/fail/tuple-lit/check.pion:3:9
  │
3 │ let _ = (false, false, false) : (Int, Int, Int, Int);
  │         ^^^^^^^^^^^^^^^^^^^^^ type mismatch, expected `(Int, Int, Int, Int)`, found `(Bool, Bool, Bool)`

error: mismatched types
  ┌─ tests/fail/tuple-lit/check.pion:4:9
  │
4 │ let _ = (false, false, false) : (Int, Int, Int);
  │         ^^^^^^^^^^^^^^^^^^^^^ type mismatch, expected `(Int, Int, Int)`, found `(Bool, Bool, Bool)`

error: mismatched types
  ┌─ tests/fail/tuple-lit/check.pion:5:9
  │
5 │ let _ = (false, false, false) : (Int, Int);
  │         ^^^^^^^^^^^^^^^^^^^^^ type mismatch, expected `(Int, Int)`, found `(Bool, Bool, Bool)`

